# robobo-gazebo-simulator

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: robobo.launch  robobo_multi.launch  robobo_rviz.launch  robobo_single.launch
materials/scripts/: emotion.material
meshes/: Pusher.dae  body_collision.dae  left_wheel_visual.dae  right_wheel_visual.dae
model_editor_models/: ._velocidad40_qr
model_editor_models/apple/: model.config  model.sdf
model_editor_models/aruco00/: model.config  model.sdf
model_editor_models/aruco01/: model.config  model.sdf
model_editor_models/aruco02/: model.config  model.sdf
model_editor_models/aruco03/: model.config  model.sdf
model_editor_models/aruco04/: model.config  model.sdf
model_editor_models/aruco05/: model.config  model.sdf
model_editor_models/aruco06/: model.config  model.sdf
model_editor_models/aruco07/: model.config  model.sdf
model_editor_models/bottle/: model.config  model.sdf
model_editor_models/cylinder_medium_blue/: ._model.sdf
model_editor_models/glass/: model.sdf
models/stl/: Table_goi.dae  Table_goi.stl  bottle_2.dae  box_blender.stl  cube_blend.stl  cylinder_small.stl  paredes_lab.stl
models/stl/ARUCOS/00/: aruco_0.dae
models/stl/ARUCOS/01/: aruco_01.dae
models/stl/ARUCOS/02/: aruco_02.dae
models/stl/ARUCOS/03/: aruco_03.dae
models/stl/ARUCOS/04/: aruco_04.dae
models/stl/ARUCOS/05/: aruco_05.dae
models/stl/ARUCOS/06/: aruco_06.dae
models/stl/ARUCOS/07/: aruco_07.dae
models/stl/ARUCOS/08/: aruco_08.dae
models/stl/ARUCOS/09/: aruco_09.dae
models/stl/Big_cesped/: cesped_big.dae
models/stl/City/: city.dae
models/stl/SENALES_ARUCOS/CEDA/: ceda_aruco.dae
models/stl/SENALES_ARUCOS/DERECHA/: cha_aruco.dae
models/stl/SENALES_ARUCOS/DOS/: dos_aruco.dae
models/stl/SENALES_ARUCOS/IZQUIERDA/: izq_aruco.dae
models/stl/SENALES_ARUCOS/PARAR/: parar_aruco.dae
models/stl/SENALES_ARUCOS/PARKING/: parking_aruco.dae
models/stl/SENALES_ARUCOS/PEATONES/: peatones_aruco.dae
models/stl/SENALES_ARUCOS/PELIGRO DERECHA/: peligr_dcha_aruco.dae
models/stl/SENALES_ARUCOS/PELIGRO IZQUIERDA/: peligr_izq_aruco.dae
models/stl/SENALES_ARUCOS/ROTONDA/: rotonda_aruco.dae
models/stl/SENALES_ARUCOS/UNO/: uno_aruco.dae
models/stl/SENALES_ARUCOS/VELOCIDAD10/: velo10_aruco.dae
models/stl/SENALES_ARUCOS/VELOCIDAD20/: velo20_aruco.dae
models/stl/SENALES_ARUCOS/VELOCIDAD40/: velo40_aruco.dae
models/stl/SENALES_ARUCOS/VELOCIDAD50/: velo50_aruco.dae
models/stl/SENALES_QR/CEDA/: ceda_qr.dae
models/stl/SENALES_QR/DERECHA/: dcha_qr.dae
models/stl/SENALES_QR/DOS/: dos_qr.dae
models/stl/SENALES_QR/IZQUIERDA/: izq_qr.dae
models/stl/SENALES_QR/PARAR/: parar_qr.dae
models/stl/SENALES_QR/PARKING/: parking_qr.dae
models/stl/SENALES_QR/PEATONES/: peatones_qr.dae
models/stl/SENALES_QR/PELIGRO DERECHA/: pelgr_dcha_qr.dae
models/stl/SENALES_QR/PELIGRO IZQUIERDA/: peligr_izq_qr.dae
models/stl/SENALES_QR/ROTONDA/: rotonda_qr.dae
models/stl/SENALES_QR/UNO/: uno_qr.dae
models/stl/SENALES_QR/VELOCIDAD10/: velo10_qr.dae
models/stl/SENALES_QR/VELOCIDAD20/: velo20_qr.dae
models/stl/SENALES_QR/VELOCIDAD40/: velo40_qr.dae
models/stl/SENALES_QR/VELOCIDAD50/: velo50_qr.dae
models/stl/SUPERMARKET_DAE/: supermarket.dae
models/stl/Tile/: tile.dae
models/stl/almacen/: warehouse.dae
models/stl/apple/: aplee_2.dae
models/stl/cesped/: cesped.dae
models/stl/collision/: ceda_collision.dae  dog_collision.dae  peaton_collision.dae  suelo_collision.dae  velocidad_collision.dae
models/stl/daeBlender/: bigcity.dae
models/stl/ground/: ground.dae
models/stl/labyrinth/: laberinto.dae
models/stl/labyrinth spacer/: labyrinth_spacer.dae
models/stl/maze01/: laberinto_01.dae
models/stl/maze02/: maze_02.dae
models/stl/rotonda/: Rotonda.dae
models/stl/udc_gaz/: udc_gaz.dae
nodes/: robobo_irs
nodes/src/robobo/: __init__.py  robobo_irs.py
plugins/: battery_consumer.cpp  battery_discharge.cpp  emotion.cpp  encoders.cpp  infrared_range.cpp  led_color.cpp  light_sensor.cpp  move_pan_tilt.cpp  move_wheels.cpp  robobo_imu_sensor.cpp
plugins/include/robobo/: ROS_debugging.h  battery_consumer.hh  battery_discharge.hh  emotion.h  encoders.h  infrared_range.h  led_color.h  light_sensor.h  move_pan_tilt.h  move_wheels.h  robobo_imu_sensor.h
rviz_config/: robobo.rviz
scripts/: cameraTest.py  completeTest.py  moveTest.py  panTiltTest.py  robobo-irs-ros-color.py  robobo-irs-ros.py  robobo-multirobot-ros.py  robobo-multirobot.py
urdf/: robobo.urdf.xacro
urdf/robobo/: model.urdf.xacro
worlds/: city1.world  city2.world  city_aruco.world  city_arucos.world  city_qr.world  dark_maze.world  maze01.world  maze02.world  maze03.world  maze1.world  maze2.world  object.world  objects.world  small_city_arucos.world  small_city_qr.world  table.world  test.world  warehouse.world  world7.world
